--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ if (document.images) {
             <div class="headPhoto"></div>
             <!-- 介绍 -->
             <div class="meBox-title">
-                <p>Nuymakstone</p>
+                <p>NuymakStone</p>
                 <div class="fg"></div>
             </div>
             <div class="meBox-text">
