--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
 
-    <title>Nuymakstone | 个人主页</title>
+    <title>NuymakStone | 个人主页</title>
     <meta name="description" content="主页">
     <meta name="keywords" content="NuymakStone的小窝">
     <link rel="stylesheet" type="text/css" href="./index/stylesheet.css">
